my-first web-commit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shamim Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <title>Donation Webpage</title>
+
 </head>
+
 <body>
-    
+    <section class="header">
+        <div class="hd">
+            <h1>Let us stand by the people affected by the floods</h1><br>
+            <p>You can make a difference by donating today to Mirzapur Ex-Cadets' Association of North America. I am an
+                ex-cadet of Mirzapur Cadet College in Bangladesh under the MECANA nonprofit. I am currently living in
+                Auburn, AL and the Organizing Secretary of MECANA.
+                Let us stand by the flood-affected people of Sylhet and Kurigram in Bangladesh. </p><br>
+
+            <a class="btn" href="#">Donate Now</a>
+        </div>
+
+    </section><br><br>
+    <section class="container">
+        <div class="container1">
+            <h1>Donate Today</h1>
+
+            <p>If you want, you can donate 100tk,200tk,500tk,1000tk,5000tk and more today.</p><br><br><br>
+            <span>100tk</span>
+            <span class="btn">200tk</span>
+            <span>500tk</span>
+            <span>1000tk</span>
+            <span>5000tk</span><br><br><br><br>
+            <p class="ptag">Other Amount(Taka)</p>
+            <hr><br>
+            <a href="#">Donate Now</a>
+
+
+        </div>
+    </section><br><br><br>
+    <section class="side">
+        <div class="cont">
+            <h1>Our Donate Plan </h1>
+            <p>We want to help flood-affected people food,shelter and education.</p>
+        </div>
+        <div class="tb">
+            <div class="dv1">
+                <h2>Food for a family</h2>
+                <p>As food we will give rice some raw vegetables and pure water.Each food affected family can run their
+                    family for a few days.</p>
+            </div>
+            <div class="dv2">
+                <h2>Shelter for a family</h2>
+                <p>We will build houses where the water will not rise to shelter the affected families.</p>
+            </div>
+            <div class="dv3">
+                <h2>Education for a family</h2>
+                <p>We will provide whatever is needed for the education systems of a flood-affected family. </p>
+            </div>
+        </div>
+    </section>
+    <section class="main">
+        <div class="main1">
+            <div class="write">
+                <h1>Now is the time to stand beside the helpless flood-hit people</h1>
+                <p>The flood situation in Sylhet and Sunamganj has reached alarming proportions due to torrential
+                    downpours and steep slopes. Due to heavy rains in Meghalaya-Assam of India, the third phase of the
+                    current flood season has occurred in the Sylhet region due to the water coming down from the upper
+                    reaches. Residents of the region are devastated by one flood after another. Millions of people in
+                    the two districts are under water. Many important installations have also been seriously flood
+                    heated.
+                </p><br>
+                <a href="#">How to Contribute?</a>
+            </div>
+            <div class="photo">
+                <img src="donation0.jpg">
+            </div>
+        </div>
+    </section>
+    <section class="main2">
+        <div class="main3">
+            <div class="photo1">
+                <img src="donation11.jpg">
+            </div>
+            <div class="write1">
+                <h1>How to Survive a Flood</h1>
+                <p>
+                    Floods can strike quickly and with little warning in many parts of the world. Surviving a flood is a
+                    combination of preparation and appropriate action as soon as the disaster begins. Prepare yourself
+                    for a flood by packing an emergency kit and finding shelter. Stay away from water and stick to high
+                    ground during the flood. Afterwards, cautiously return home. Disinfect and repair affected areas so
+                    you’ll stay safe even after the water is gone.
+                </p><br>
+                <a href="#">How to Contribute?</a>
+            </div>
+
+    </section>
+    <section class="main4">
+        <div class="main5">
+            <div class="write2">
+                <h1>Our donations depend on their lives</h1>
+                <p>Every human being in the world is dependent on each other.Since many of them have been affected by
+                    the floods, it's our duty to help them.</p><br>
+                <a href="#">How to Contribute?</a>
+            </div>
+            <div class="photo2">
+                <img src="donation12.png">
+            </div>
+        </div>
+    </section><br>
+
+    <section class="input">
+        <div class="input1">
+            <div class="prg">
+                <h1>Get My Updates</h1>
+                <p>If you want to get my updates,enter the email address bellow and subscribe.You should take our
+                    updates on what we are doing with the money</p>
+            </div>
+            <div class="input2">
+                <input type="text" placeholder="Email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section><br><br>
+    <footer>
+        <div class="futa">
+
+            <h1>Our Team Members</h1>
+            <p>The members of our teams are always continuing their activities from your donation</p>
+        </div>
+
+
+
+    </footer>
 </body>
+
 </html>
